--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@
       <div class="loader__container">
         <div class="loader__circle">
           <img src="AINSI CONSULTING LOGO SS FOND.png" alt="AINSI CONSULTING">
+          <p>AINSI CONSULTING</p>
         </div>
       </div>
     </div>
