--- a/index.html
+++ b/index.html
@@ -230,6 +230,7 @@
       <!-- Logo Start -->
       <div class="header__logo">
         <img src="AINSI CONSULTING LOGO SS FOND.png" width="30" height="30">
+                  <p>AINSI CONSULTING</p>
       </div>
       <!-- Logo End -->
 
